examples/test/testpolicy15530.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15530
  namespace: namespace5
spec:
  podSelector:
    matchLabels:
      key44: value27
      key41: value27
      key34: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value7
          key15: value31
          key6: value40
      podSelector:
        matchLabels:
          key45: value1
          key21: value31
